correcting places name

--- a/FrontEnd/home.html
+++ b/FrontEnd/home.html
@@ -45,13 +45,23 @@
       <div id="navbar">
         <nav id="navbar1">
           <ul>
-            <li id="firstlist">Travel & Tourism</li>
+            <li id="firstlist">Jolpoth</li>
             <a href="home.html" class="links"><li id="secondlist">Home</li></a>
-            <a href="./pages/blogs.html" class="links"><li id="thirdlist">Blogs</li></a>
-            <a href="./pages/about.html" class="links"><li id="fourthlist">About Us</li></a>
-            <a href="./pages/our_tours.html" class="links"><li id="fifthlist">Our Tours</li></a>
-            <a href="./pages/travelStory.html" class="links"><li id="sixthlist">Travel Story</li></a>
-            <a href="./pages/contact.html" class="links"><li id="seventhlist">Contact us</li></a>
+            <a href="./pages/blogs.html" class="links"
+              ><li id="thirdlist">Blogs</li></a
+            >
+            <a href="./pages/about.html" class="links"
+              ><li id="fourthlist">About Us</li></a
+            >
+            <a href="./pages/our_tours.html" class="links"
+              ><li id="fifthlist">Our Tours</li></a
+            >
+            <a href="./pages/travelStory.html" class="links"
+              ><li id="sixthlist">Travel Story</li></a
+            >
+            <a href="./pages/contact.html" class="links"
+              ><li id="seventhlist">Contact us</li></a
+            >
             <a href="./pages/register.html" class="links"
               ><li id="eighthlist">
                 <button id="button1">Register Now</button>
@@ -113,28 +123,28 @@
                 <a class="cardlink" href=""
                   ><img
                     class="cardimage"
-                    src="./assets/img/Saintmartin.jpg"
+                    src="./assets/img/Sadarghat.jpg"
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Saintmartin</h5></a
+                  ><h5 class="cardheading">Sadarghat</h5></a
                 >
                 <a class="cardlink" href=""
-                  ><p class="cardparagraph">Bangladesh, Cox's Bazar</p></a
+                  ><p class="cardparagraph">Dhaka, Bangladesh</p></a
                 >
               </div>
               <div class="carddiv1">
                 <a class="cardlink" href=""
                   ><img
                     class="cardimage"
-                    src="./assets/img/Sundarban.jpg"
+                    src="./assets/img/Floating Market.jpg"
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Sundarban</h5></a
+                  ><h5 class="cardheading">Floating Market</h5></a
                 >
                 <a class="cardlink" href=""
-                  ><p class="cardparagraph">Bangladesh, Khulna</p></a
+                  ><p class="cardparagraph">Barishal, Bangladesh</p></a
                 >
               </div>
               <div class="carddiv1">
@@ -142,10 +152,10 @@
                   ><img class="cardimage" src="./assets/img/Patenga.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Patenga Sea Beach</h5></a
+                  ><h5 class="cardheading">Padma River</h5></a
                 >
                 <a class="cardlink" href=""
-                  ><p class="cardparagraph">Bangladesh, Chattogram</p></a
+                  ><p class="cardparagraph">Dhaka, Bangladesh</p></a
                 >
               </div>
               <div class="carddiv1">
@@ -153,10 +163,10 @@
                   ><img class="cardimage" src="./assets/img/Mermaid.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Mermaid Beach</h5></a
+                  ><h5 class="cardheading">Brahmaputra River</h5></a
                 >
                 <a class="cardlink" href=""
-                  ><p class="cardparagraph">Bangladesh, Cox's Bazar</p></a
+                  ><p class="cardparagraph">Kurigram, Bangladesh</p></a
                 >
               </div>
               <div class="carddiv1">
@@ -164,10 +174,10 @@
                   ><img class="cardimage" src="./assets/img/Tanguar.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Tanguar Haor</h5></a
+                  ><h5 class="cardheading">Meghna</h5></a
                 >
                 <a class="cardlink" href=""
-                  ><p class="cardparagraph">Bangladesh, Sunamganj</p></a
+                  ><p class="cardparagraph">Chadpur, Bangladesh</p></a
                 >
               </div>
               <div class="carddiv1">
@@ -178,10 +188,10 @@
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Ratargul Swamp</h5></a
+                  ><h5 class="cardheading">Kapti Lake</h5></a
                 >
                 <a class="cardlink" href=""
-                  ><p class="cardparagraph">Bangladesh, Sylhet</p></a
+                  ><p class="cardparagraph">Rangamati, Bangladesh</p></a
                 >
               </div>
             </div>
@@ -207,11 +217,11 @@
                 <a class="cardlink" href=""
                   ><img
                     class="cardimage"
-                    src="./assets/img/Saintmartin.jpg"
+                    src="./assets/img/Sadarghat.jpg"
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Saintmartin</h5></a
+                  ><h5 class="cardheading">Sadarghat</h5></a
                 >
                 <a class="cardlink" href=""
                   ><p class="cardparagraph">Bangladesh, Dhaka</p></a
@@ -221,11 +231,11 @@
                 <a class="cardlink" href=""
                   ><img
                     class="cardimage"
-                    src="./assets/img/Sundarban.jpg"
+                    src="./assets/img/Floating Market.jpg"
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Sundarban</h5></a
+                  ><h5 class="cardheading">Floating Market</h5></a
                 >
                 <a class="cardlink" href=""
                   ><p class="cardparagraph">Bangladesh, Dhaka</p></a
@@ -236,7 +246,7 @@
                   ><img class="cardimage" src="./assets/img/Patenga.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Patenga Sea Beach</h5></a
+                  ><h5 class="cardheading">Padma River</h5></a
                 >
                 <a class="cardlink" href=""
                   ><p class="cardparagraph">Bangladesh, Dhaka</p></a
@@ -247,7 +257,7 @@
                   ><img class="cardimage" src="./assets/img/Mermaid.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Mermaid Beach</h5></a
+                  ><h5 class="cardheading">Brahmaputra River</h5></a
                 >
                 <a class="cardlink" href=""
                   ><p class="cardparagraph">Bangladesh, Dhaka</p></a
@@ -258,7 +268,7 @@
                   ><img class="cardimage" src="./assets/img/Tanguar.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Tanguar Haor</h5></a
+                  ><h5 class="cardheading">Meghna</h5></a
                 >
                 <a class="cardlink" href=""
                   ><p class="cardparagraph">Bangladesh, Dhaka</p></a
@@ -272,7 +282,7 @@
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Ratargul Swamp</h5></a
+                  ><h5 class="cardheading">Kapti Lake</h5></a
                 >
                 <a class="cardlink" href=""
                   ><p class="cardparagraph">Bangladesh, Dhaka</p></a
@@ -301,11 +311,11 @@
                 <a class="cardlink" href=""
                   ><img
                     class="cardimage"
-                    src="./assets/img/Saintmartin.jpg"
+                    src="./assets/img/Sadarghat.jpg"
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Saintmartin</h5></a
+                  ><h5 class="cardheading">Sadarghat</h5></a
                 >
                 <a class="cardlink" href=""
                   ><p class="cardparagraph">Bangladesh, Dhaka</p></a
@@ -315,11 +325,11 @@
                 <a class="cardlink" href=""
                   ><img
                     class="cardimage"
-                    src="./assets/img/Sundarban.jpg"
+                    src="./assets/img/Floating Market.jpg"
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Sundarban</h5></a
+                  ><h5 class="cardheading">Floating Market</h5></a
                 >
                 <a class="cardlink" href=""
                   ><p class="cardparagraph">Bangladesh, Dhaka</p></a
@@ -330,7 +340,7 @@
                   ><img class="cardimage" src="./assets/img/Patenga.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Patenga Sea Beach</h5></a
+                  ><h5 class="cardheading">Padma River</h5></a
                 >
                 <a class="cardlink" href=""
                   ><p class="cardparagraph">Bangladesh, Dhaka</p></a
@@ -341,7 +351,7 @@
                   ><img class="cardimage" src="./assets/img/Mermaid.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Mermaid Beach</h5></a
+                  ><h5 class="cardheading">Brahmaputra River</h5></a
                 >
                 <a class="cardlink" href=""
                   ><p class="cardparagraph">Bangladesh, Dhaka</p></a
@@ -352,7 +362,7 @@
                   ><img class="cardimage" src="./assets/img/Tanguar.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Tanguar Haor</h5></a
+                  ><h5 class="cardheading">Meghna</h5></a
                 >
                 <a class="cardlink" href=""
                   ><p class="cardparagraph">Bangladesh, Dhaka</p></a
@@ -366,7 +376,7 @@
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
-                  ><h5 class="cardheading">Ratargul Swamp</h5></a
+                  ><h5 class="cardheading">Kapti Lake</h5></a
                 >
                 <a class="cardlink" href=""
                   ><p class="cardparagraph">Bangladesh, Dhaka</p></a
