--- a/FrontEnd/pages/about.html
+++ b/FrontEnd/pages/about.html
@@ -2,10 +2,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/fd4d75259d.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/fd4d75259d.js"
+      crossorigin="anonymous"
+    ></script>
     <title>About</title>
     <style>
-      *{
+      * {
         margin: 0;
         padding: 0;
         /* font-family: Arial, sans-serif; */
@@ -149,7 +152,7 @@
         /* font-family: Arial, sans-serif; */
         background-color: #353636;
       }
-      footer > div{
+      footer > div {
         max-width: 1400px;
         margin: 0 auto;
       }
@@ -199,7 +202,7 @@
     <div id="navbar">
       <nav id="navbar1">
         <ul>
-          <li id="firstlist">Travel & Tourism</li>
+          <li id="firstlist">Jolpoth</li>
           <a href="../home.html" class="links">
             <li id="secondlist">Home</li>
           </a>
@@ -317,50 +320,52 @@
     <footer>
       <div>
         <h1>Travel & Tourism</h1>
-      <p>
-        Fickle Flight is your one-stop travel portal. We offer hassle free
-        flight and hotel bookings. We also have all your <br />
-        flight needs in you online shop.
-      </p>
-      <br />
-      <br />
-      <hr />
-      <br />
-      <div id="footer">
-        <div>
-          <p class="footer_para"><a class="footer_link" href="">Home</a></p>
+        <p>
+          Fickle Flight is your one-stop travel portal. We offer hassle free
+          flight and hotel bookings. We also have all your <br />
+          flight needs in you online shop.
+        </p>
+        <br />
+        <br />
+        <hr />
+        <br />
+        <div id="footer">
+          <div>
+            <p class="footer_para"><a class="footer_link" href="">Home</a></p>
+          </div>
+          <div>
+            <p class="footer_para">
+              <a class="footer_link" href="">About us</a>
+            </p>
+          </div>
+          <div>
+            <p class="footer_para">
+              <a class="footer_link" href="">Contact us</a>
+            </p>
+          </div>
         </div>
-        <div>
-          <p class="footer_para"><a class="footer_link" href="">About us</a></p>
+        <div id="footer_link">
+          <div>
+            <a class="footer_link" href=""
+              ><i class="fa-brands fa-facebook-f"></i
+            ></a>
+          </div>
+          <div>
+            <a class="footer_link" href=""
+              ><i class="fa-brands fa-linkedin-in"></i
+            ></a>
+          </div>
+          <div>
+            <a class="footer_link" href=""
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+          </div>
+          <div>
+            <a class="footer_link" href=""
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+          </div>
         </div>
-        <div>
-          <p class="footer_para">
-            <a class="footer_link" href="">Contact us</a>
-          </p>
-        </div>
-      </div>
-      <div id="footer_link">
-        <div>
-          <a class="footer_link" href=""
-            ><i class="fa-brands fa-facebook-f"></i
-          ></a>
-        </div>
-        <div>
-          <a class="footer_link" href=""
-            ><i class="fa-brands fa-linkedin-in"></i
-          ></a>
-        </div>
-        <div>
-          <a class="footer_link" href=""
-            ><i class="fa-brands fa-instagram"></i
-          ></a>
-        </div>
-        <div>
-          <a class="footer_link" href=""
-            ><i class="fa-brands fa-twitter"></i
-          ></a>
-        </div>
-      </div>
       </div>
     </footer>
   </body>
