--- a/FrontEnd/pages/blogDetails.html
+++ b/FrontEnd/pages/blogDetails.html
@@ -199,7 +199,7 @@
     <div id="navbar">
       <nav id="navbar1">
         <ul>
-          <li id="firstlist">Travel & Tourism</li>
+          <li id="firstlist">Jolpoth</li>
           <a href="../home.html" class="links">
             <li id="secondlist">Home</li>
           </a>
