--- a/FrontEnd/pages/blogs.html
+++ b/FrontEnd/pages/blogs.html
@@ -16,7 +16,7 @@
     <div class="navbar_container" style="background-image: url('../assets/img/width_img1.png');">
         <nav class="cus_pt_5 cus_light d_flex navbar">
             <div class="brand_name d_flex cus_nav_link cus_link cus_ms_5">
-                <a href="" class="cus_light brand_name_title">Travel & Tourism</a>
+                <a href="" class="cus_light brand_name_title">Jolpoth</a>
             </div>
             <ul class="cus_nav_link nav_ul_font_size m_auto ">
                 <li class="nav_link_m"><a href="../home.html" class="">HOME</a></li>
@@ -90,7 +90,7 @@
                                                         <img src="../assets/img/img1.png" alt="">
                                                     </div>
                                                     <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                        <h2>Saintmartin</h2>
+                                                        <h2>Sadarghat</h2>
                                                         <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                         <button class="see_more_btn">See more</button>
@@ -105,7 +105,7 @@
                                                         <img src="../assets/img/img2.png" alt="">
                                                     </div>
                                                     <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                        <h2>Sundarban</h2>
+                                                        <h2>Padma River</h2>
                                                         <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                         <button class="see_more_btn">See more</button>
@@ -120,7 +120,7 @@
                                                         <img src="../assets/img/img3.png" alt="">
                                                     </div>
                                                     <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                        <h2>Patenga Sea Beach</h2>
+                                                        <h2>Floating Market</h2>
                                                         <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                         <button class="see_more_btn">See more</button>
@@ -138,7 +138,7 @@
                                                         <img src="../assets/img/img4.png" alt="">
                                                     </div>
                                                     <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                        <h2>Mermaid Beach </h2>
+                                                        <h2>Kaptai Lake </h2>
                                                         <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                         <button class="see_more_btn">See more</button>
@@ -153,7 +153,7 @@
                                                         <img src="../assets/img/img5.png" alt="">
                                                     </div>
                                                     <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                        <h2>Tangur Haor</h2>
+                                                        <h2>Meghna</h2>
                                                         <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                         <button class="see_more_btn">See more</button>
@@ -168,7 +168,7 @@
                                                         <img src="../assets/img/img6.png" alt="">
                                                     </div>
                                                     <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                        <h2>Rarargul Swamp</h2>
+                                                        <h2>Brahmaputra River</h2>
                                                         <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                         <button class="see_more_btn">See more</button>
@@ -195,7 +195,7 @@
                                                             <img src="../assets/img/img1.png" alt="">
                                                         </div>
                                                         <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                            <h2>Saintmartin</h2>
+                                                            <h2>Sadarghat</h2>
                                                             <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                             <button class="see_more_btn">See more</button>
@@ -210,7 +210,7 @@
                                                             <img src="../assets/img/img2.png" alt="">
                                                         </div>
                                                         <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                            <h2>Sundarban</h2>
+                                                            <h2>Padma River</h2>
                                                             <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                             <button class="see_more_btn">See more</button>
@@ -225,7 +225,7 @@
                                                             <img src="../assets/img/img3.png" alt="">
                                                         </div>
                                                         <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                            <h2>Patenga Sea Beach</h2>
+                                                            <h2>Floating Market</h2>
                                                             <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                             <button class="see_more_btn">See more</button>
@@ -242,7 +242,7 @@
                                                             <img src="../assets/img/img4.png" alt="">
                                                         </div>
                                                         <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                            <h2>Mermaid Beach </h2>
+                                                            <h2>Kaptai Lake </h2>
                                                             <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                             <button class="see_more_btn">See more</button>
@@ -257,7 +257,7 @@
                                                             <img src="../assets/img/img5.png" alt="">
                                                         </div>
                                                         <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                            <h2>Tangur Haor</h2>
+                                                            <h2>Meghna</h2>
                                                             <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                             <button class="see_more_btn">See more</button>
@@ -272,7 +272,7 @@
                                                             <img src="../assets/img/img6.png" alt="">
                                                         </div>
                                                         <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                            <h2>Rarargul Swamp</h2>
+                                                            <h2>Brahmaputra River</h2>
                                                             <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                             <button class="see_more_btn">See more</button>
@@ -300,7 +300,7 @@
                                                             <img src="../assets/img/img1.png" alt="">
                                                         </div>
                                                         <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                            <h2>Saintmartin</h2>
+                                                            <h2>Sadarghat</h2>
                                                             <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                             <button class="see_more_btn">See more</button>
@@ -315,7 +315,7 @@
                                                             <img src="../assets/img/img2.png" alt="">
                                                         </div>
                                                         <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                            <h2>Sundarban</h2>
+                                                            <h2>Padma River</h2>
                                                             <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                             <button class="see_more_btn">See more</button>
@@ -330,7 +330,7 @@
                                                             <img src="../assets/img/img3.png" alt="">
                                                         </div>
                                                         <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                            <h2>Patenga Sea Beach</h2>
+                                                            <h2>Floating Market</h2>
                                                             <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                             <button class="see_more_btn">See more</button>
@@ -347,7 +347,7 @@
                                                             <img src="../assets/img/img4.png" alt="">
                                                         </div>
                                                         <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                            <h2>Mermaid Beach </h2>
+                                                            <h2>Kaptai Lake </h2>
                                                             <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                             <button class="see_more_btn">See more</button>
@@ -362,7 +362,7 @@
                                                             <img src="../assets/img/img5.png" alt="">
                                                         </div>
                                                         <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                            <h2>Tangur Haor</h2>
+                                                            <h2>Meghna</h2>
                                                             <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                             <button class="see_more_btn">See more</button>
@@ -377,7 +377,7 @@
                                                             <img src="../assets/img/img6.png" alt="">
                                                         </div>
                                                         <div class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5">
-                                                            <h2>Rarargul Swamp</h2>
+                                                            <h2>Brahmaputra River</h2>
                                                             <p class="cus_mt_5 cus_secondary">Fickle Flight is your one-stop travel portal. We offer hassle free flight and hotel bookings.</p>
 
                                                             <button class="see_more_btn">See more</button>
