blog detail page image add

--- a/FrontEnd/pages/blogDetails.html
+++ b/FrontEnd/pages/blogDetails.html
@@ -227,27 +227,11 @@
     <div class="mainDiv">
       <h1>Blog Details</h1>
       <div class="blogDiv">
-        <img src="../assets/img/ratargul.jpg" alt="" />
-        <h1>Ratar gul swamp forest</h1>
+        <img src="../assets/img/blogdetails.jpg" alt="" />
+        <h1>A Land of Rivers</h1>
         <p>
-          Wednesday, August 24, 2022 | Tag Cloud Tags: Biden, EU, Euro, Europe,
-          Joe Biden, Military, News, Russia, Security, UK, Ukraine, United
-          States, Worthy News (Worthy News) U.S. President Joe Biden has
-          announced nearly $3 billion in new U.S. military aid for Kyiv as
-          Ukraine marked its independence day six months after Russia invaded
-          the country.'The United States of America is committed to supporting
-          the people of Ukraine as they continue the fight to defend their
-          sovereignty. As part of that commitment, I am proud to announce our
-          biggest tranche of security assistance to date: approximately $2.
-          Wednesday, August 24, 2022 | Tag Cloud Tags: Biden, EU, Euro, Europe,
-          Joe Biden, Military, News, Russia, Security, UK, Ukraine, United
-          States, Worthy News (Worthy News) U.S. President Joe Biden has
-          announced nearly $3 billion in new U.S. military aid for Kyiv as
-          Ukraine marked its independence day six months after Russia invaded
-          the country.'The United States of America is committed to supporting
-          the people of Ukraine as they continue the fight to defend their
-          sovereignty. As part of that commitment, I am proud to announce our
-          biggest tranche of security assistance to date: approximately $2.
+          Welcome to riverine country. Bangladesh is braided together by more than 700 rivers, producing a deliciously lush landscape with more shades of green than you ever imagined. Travelling by boat is a way of life here, and provides a fabulous opportunity to see the country from a more unusual angle. This is one of the world’s most densely populated countries, but once you’re slowly floating downriver on a small wooden rowboat, it’s easy to imagine you have it all to yourself. Whether you're travelling to hectic Dhaka or to the Sundarbans' mangrove forests, boats large and small will help you explore Bangladesh's riches.
+          Welcome to riverine country. Bangladesh is braided together by more than 700 rivers, producing a deliciously lush landscape with more shades of green than you ever imagined. Travelling by boat is a way of life here, and provides a fabulous opportunity to see the country from a more unusual angle. This is one of the world’s most densely populated countries, but once you’re slowly floating downriver on a small wooden rowboat, it’s easy to imagine you have it all to yourself. Whether you're travelling to hectic Dhaka or to the Sundarbans' mangrove forests, boats large and small will help you explore Bangladesh's riches.Welcome to riverine country. Bangladesh is braided together by more than 700 rivers, producing a deliciously lush landscape with more shades of green than you ever imagined. Travelling by boat is a way of life here, and provides a fabulous opportunity to see the country from a more unusual angle. This is one of the world’s most densely populated countries, but once you’re slowly floating downriver on a small wooden rowboat, it’s easy to imagine you have it all to yourself. Whether you're travelling to hectic Dhaka or to the Sundarbans' mangrove forests, boats large and small will help you explore Bangladesh's riches.Welcome to riverine country. Bangladesh is braided together by more than 700 rivers, producing a deliciously lush landscape with more shades of green than you ever imagined. Travelling by boat is a way of life here, and provides a fabulous opportunity to see the country from a more unusual angle. This is one of the world’s most densely populated countries, but once you’re slowly floating downriver on a small wooden rowboat, it’s easy to imagine you have it all to yourself. Whether you're travelling to hectic Dhaka or to the Sundarbans' mangrove forests, boats large and small will help you explore Bangladesh's riches.Welcome to riverine country. Bangladesh is braided together by more than 700 rivers, producing a deliciously lush landscape with more shades of green than you ever imagined. Travelling by boat is a way of life here, and provides a fabulous opportunity to see the country from a more unusual angle. This is one of the world’s most densely populated countries, but once you’re slowly floating downriver on a small wooden rowboat, it’s easy to imagine you have it all to yourself. Whether you're travelling to hectic Dhaka or to the Sundarbans' mangrove forests, boats large and small will help you explore Bangladesh's riches.
         </p>
       </div>
     </div>
